// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-fjdhpX gbVcme"
  >
    <h5
      class="sc-jTzLTM gMfcEb"
    >
      Node Labels
    </h5>
    <div
      class="sc-jzJRlG bBkVBZ"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-fjdhpX gbVcme"
  >
    <h5
      class="sc-jTzLTM gMfcEb"
    >
      Node Labels
    </h5>
    <div
      class="sc-jzJRlG bBkVBZ"
    >
      <div
        class="sc-bwzfXH sc-htpNat hxlDKB"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-bwzfXH sc-htpNat hxlDKB"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-bwzfXH sc-htpNat hxlDKB"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-fjdhpX gbVcme"
  >
    <h5
      class="sc-jTzLTM gMfcEb"
    >
      Property Keys
    </h5>
    <div
      class="sc-jzJRlG bBkVBZ"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-fjdhpX gbVcme"
  >
    <h5
      class="sc-jTzLTM gMfcEb"
    >
      Property Keys
    </h5>
    <div
      class="sc-jzJRlG bBkVBZ"
    >
      <div
        class="sc-bwzfXH sc-ifAKCX hkamDg"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-bwzfXH sc-ifAKCX hkamDg"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-fjdhpX gbVcme"
  >
    <h5
      class="sc-jTzLTM gMfcEb"
    >
      Relationship Types
    </h5>
    <div
      class="sc-jzJRlG bBkVBZ"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-fjdhpX gbVcme"
  >
    <h5
      class="sc-jTzLTM gMfcEb"
    >
      Relationship Types
    </h5>
    <div
      class="sc-jzJRlG bBkVBZ"
    >
      <div
        class="sc-bwzfXH sc-bxivhb gbnRcf"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-bwzfXH sc-bxivhb gbnRcf"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-bwzfXH sc-bxivhb gbnRcf"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
